@startuml
set namespaceSeparator ::

class "spike_v2::src::board::src::widgets::get_size.dart::_MeasureSizeRenderObject" {
  +Size? oldSize
  +void Function(Size) onChange
  +void performLayout()
}

"spike_v2::src::board::src::widgets::get_size.dart::_MeasureSizeRenderObject" o-- "dart::ui::Size"
"spike_v2::src::board::src::widgets::get_size.dart::_MeasureSizeRenderObject" o-- "spike_v2::src::board::src::widgets::get_size.dart::void Function(Size)"
"flutter::src::rendering::proxy_box.dart::RenderProxyBox" <|-- "spike_v2::src::board::src::widgets::get_size.dart::_MeasureSizeRenderObject"

class "spike_v2::src::board::src::widgets::get_size.dart::GetSize" {
  +void Function(Size) onChanged
  +RenderObject createRenderObject()
}

"spike_v2::src::board::src::widgets::get_size.dart::GetSize" o-- "spike_v2::src::board::src::widgets::get_size.dart::void Function(Size)"
"flutter::src::widgets::framework.dart::SingleChildRenderObjectWidget" <|-- "spike_v2::src::board::src::widgets::get_size.dart::GetSize"

class "spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" {
  +ValueListenable<T> valueListenable
  +Widget? child
  +Widget Function(T)? builder
  +Widget Function(T, Widget)? childBuilder
  +bool Function(T, T)? shouldRebuild
  +State<StatefulWidget> createState()
}

"spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" o-- "flutter::src::foundation::change_notifier.dart::ValueListenable<T>"
"spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" o-- "flutter::src::widgets::framework.dart::Widget"
"spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" o-- "null::Widget Function(T)"
"spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" o-- "null::Widget Function(T, Widget)"
"spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder" o-- "null::bool Function(T, T)"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "spike_v2::src::board::src::widgets::ex_builder.dart::ExBuilder"

class "spike_v2::src::board::src::widgets::ex_builder.dart::_ExBuilderState" {
  -T _value
  +void initState()
  +void didUpdateWidget()
  +void dispose()
  -void _valueChanged()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "spike_v2::src::board::src::widgets::ex_builder.dart::_ExBuilderState"
"spike_v2::src::board::src::helpers::safe_state.dart::SafeState" <|-- "spike_v2::src::board::src::widgets::ex_builder.dart::_ExBuilderState"


@enduml
